# pamiec

./: ARCHITECTURE.md  README.md  pyproject.toml
benchmark/: GAM_GAP_ANALYSIS.md  PAPER.md  README.md  populate.py  runner.py  score.py
benchmark/locomo/: .gitignore  README.md  convert_questions.py  populate_locomo.py  score_locomo.py
benchmark/narratives/: b2b_v1.py
benchmark/private/: .gitignore
benchmark/questions/: b2b_v1.json
benchmark/results/: b2b_v1.jsonl  summary.json
docs/: CNAME  index.html
src/memagent/: cli.py  consolidation.py  mcp_server.py
src/pamiec/: boundaries.py  cli.py  consolidation.py  db.py  embedder.py  graph_export.py  mcp_server.py  models.py  retrieval.py  session_reader.py  store.py
