[project]
name = "pamiec"
version = "0.1.0"
description = "Hierarchical graph memory for Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
    "fastembed>=0.3.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.scripts]
pamiec = "pamiec.cli:main"
pamiec-mcp = "pamiec.mcp_server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
